<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="115dp">

        <TextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/game"
            android:textColor="@color/text"
            android:textSize="21sp"
            android:textStyle="normal"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helper"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/button_h_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/btn_pressed"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:gravity="center"
            android:width="300dp"
            android:height="60dp"/>
    </LinearLayout>
</RelativeLayout>