<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GameActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_pressed"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/status_bar_1"
            android:textAlignment="textStart"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_p1"
            android:text="@string/status_bar_2"
            android:textAlignment="textStart"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:height="100dp"
                android:background="@drawable/btn_game_pressed"
                android:text=""
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>